--- a/data/_main.cfg
+++ b/data/_main.cfg
@@ -8,6 +8,9 @@
 		name="preload"
 		first_time_only=no
 		[lua]
+			code = {./lua/utils.lua}
+		[/lua]
+		[lua]
 			code = {./lua/dialog.lua}
 		[/lua]
 		[lua]
